--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <br />
                     <input type="range" min="0" max="50" name="slider" id="slider">
                     <br />
-    <button type="generateButton" class="btn btn-primary btn-lg">Generate Password</button>
-    <button type="copyButton" class="btn btn-secondary btn-lg">Copy to Clipboard</button>
+    <button type="button" onclick="generatePass()"  class="btn btn-primary btn-lg">Generate Password</button>
+    <button type="button" onclick=""  class="btn btn-secondary btn-lg">Copy to Clipboard</button>
                 <div id="length">
 
                 </div>
@@ -29,39 +29,26 @@
         </div>
 </div>
 <script>
-    //target buttons
-    var genButton = document.getElementById("generateButton");
-    var coButton = document.getElementById("copyButton");
-
-    //Generate Random Password
+   //Generate Random Password
     function generatePass() {
-
-    
-
-    //Set password length
-    var passLength = document.getElementById("slider").passValues;
-
-    //Possible password values
-    var passValues = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890!@#$%^&*()_+=-";
+        //Set password length
+    var passLength = document.getElementById("slider").value;
+        //Possible password values
+    var values = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890!@#$%^&*()_+=-";
 
     var password ="";
-
     // for loop to choose password characters
     for(var i =0; i <= passLength; i++){
-        password = password + passValues.charAt(Math.floor(Math.random() * Math.floor(passValues.length -1)));
+        password = password + values.charAt(Math.floor(Math.random() * Math.floor(values.length -1)));
     }
-
     //Add password to disply/textarea
-    document.getElementById("display").passValues = password;
+    document.getElementById("display").value = password;
 
     }
-
- 
-
-//set default length of 25
-document.getElementById("length").innerHTML = "Length: 25";
-//function to  set length based on slider
-document.getElementById("slider").oninput = function(){
+    //set default length of 25
+    document.getElementById("length").innerHTML = "Length: 25";
+    //function to  set length based on slider
+    document.getElementById("slider").oninput = function(){
 
     if(document.getElementById("slider").value > 0){
         document.getElementById("length").innerHTML = "Length: " + document.getElementById("slider").value;
@@ -70,7 +57,21 @@ document.getElementById("slider").oninput = function(){
     else{
         document.getElementById("length").innerHTML = "Length: 1";
     }
+    //function to copy password to clipboard
+    function copyPassword(){
+    document.getElementById("display").select();
+    document.execCommand('copy');
+    alert(`${document.getElementById("display").values} has been copied to clipboard.`);
+}
 
+
+
+
+
+
+
+//call the copyPassword function only when user clicks on copy to clipboard button
+copyButton.addEventListener("click", copyPassword);
 }
 </script>
 </body>
