--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <br />
                     <input type="text" id="display">
                     <br />
-                    <input type="range" min="0" max="50" name="slider" id="slider">
+                    <input type="range" min="8" max="128" name="slider" id="slider">
                     <br />
     <button type="button" onclick="generatePass()"  class="btn btn-primary btn-lg">Generate Password</button>
-    <button type="button" onclick="copyPassword()"  class="btn btn-secondary btn-lg">Copy to Clipboard</button>
+    <button type="button" onclick="copyPassword()" id="cobut" class="btn btn-secondary btn-lg">Copy to Clipboard</button>
                 <div id="length">
 
                 </div>
@@ -46,7 +46,7 @@
 
     }
     //set default length of 25
-    document.getElementById("length").innerHTML = "Length: 25";
+    document.getElementById("length").innerHTML = "Length: 64";
     //function to  set length based on slider
     document.getElementById("slider").oninput = function(){
 
@@ -55,7 +55,7 @@
 
     }
     else{
-        document.getElementById("length").innerHTML = "Length: 1";
+        document.getElementById("length").innerHTML = "Length: 8";
     }
 }
    
